# ToushinReader

./: LICENSE  PyFundJP.py  PyFundJP_Test.py  README.md  README.rst  requirements.txt  setup.cfg  setup.py
JPFundDataReader/: __init__.py
JPFundDataReader/io/: data.py  locator.py
ToushinReader/: __init__.py  core.py  locator.py  page.py
example/: example.py
