[metadata]
name = JPFundDataReader
version = 0.0.1
url = https://github.com/sawadyrr5/JPFundDataReader
author = sawady
author_email = riskreturn5@gmail.com
license = Apache 2.0
description = Japanese Mutual Fund data download library.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
install_requires =
    pandas
    lxml
zip_safe = False
packages = find:
