[metadata]
name = ToushinReader
version = 0.1.0
url = https://github.com/sawadyrr5/JPFundDataReader
author = sawady
author_email = riskreturn5@gmail.com
license = Apache 2.0
description = Japanese Mutual Fund data download library.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8.2

[options]
zip_safe = False
packages = find:
