[metadata]
name = ToushinReader
version = 0.2.1
url = https://github.com/sawadyrr5/ToushinReader
author = sawady
author_email = riskreturn5@gmail.com
license = Apache 2.0
description = Japanese Mutual Fund data download library.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
install_requires =
    beautifulsoup4
    requests
    urllib3
zip_safe = False
packages = find:
